--- a/themes/Frappe/Flamingo/userContent.css
+++ b/themes/Frappe/Flamingo/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(243, 211, 211) !important;
       --color-accent-primary-active: rgb(238, 202, 190) !important; 
       background-color: #303446 !important;
+      --in-content-page-background: #303446 !important;
     }
 
   }
