--- a/themes/Frappe/Green/userContent.css
+++ b/themes/Frappe/Green/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(180, 216, 156) !important;
       --color-accent-primary-active: rgb(148, 209, 137) !important; 
       background-color: #303446 !important;
+      --in-content-page-background: #303446 !important;
     }
 
   }
