--- a/themes/Frappe/Sky/userContent.css
+++ b/themes/Frappe/Sky/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(172, 218, 226) !important;
       --color-accent-primary-active: rgb(153, 193, 219) !important; 
       background-color: #303446 !important;
+      --in-content-page-background: #303446 !important;
     }
 
   }
