--- a/themes/Latte/Blue/userContent.css
+++ b/themes/Latte/Blue/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(56, 119, 246) !important;
       --color-accent-primary-active: rgb(31, 49, 245) !important; 
       background-color: #eff1f5 !important;
+      --in-content-page-background: #eff1f5 !important;
     }
 
   }
