--- a/themes/Latte/Flamingo/userContent.css
+++ b/themes/Latte/Flamingo/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(226, 142, 142) !important;
       --color-accent-primary-active: rgb(221, 146, 121) !important; 
       background-color: #eff1f5 !important;
+      --in-content-page-background: #eff1f5 !important;
     }
 
   }
