--- a/themes/Latte/Teal/userContent.css
+++ b/themes/Latte/Teal/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(27, 168, 175) !important;
       --color-accent-primary-active: rgb(23, 114, 153) !important; 
       background-color: #eff1f5 !important;
+      --in-content-page-background: #eff1f5 !important;
     }
 
   }
