--- a/themes/Macchiato/Blue/userContent.css
+++ b/themes/Macchiato/Blue/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(162, 190, 246) !important;
       --color-accent-primary-active: rgb(138, 147, 244) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
