--- a/themes/Macchiato/Flamingo/userContent.css
+++ b/themes/Macchiato/Flamingo/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(245, 219, 219) !important;
       --color-accent-primary-active: rgb(240, 208, 198) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
