--- a/themes/Macchiato/Peach/userContent.css
+++ b/themes/Macchiato/Peach/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(247, 185, 151) !important;
       --color-accent-primary-active: rgb(245, 198, 127) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
