--- a/themes/Macchiato/Sapphire/userContent.css
+++ b/themes/Macchiato/Sapphire/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(147, 206, 233) !important;
       --color-accent-primary-active: rgb(126, 170, 228) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
