--- a/themes/Macchiato/Sky/userContent.css
+++ b/themes/Macchiato/Sky/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(166, 222, 232) !important;
       --color-accent-primary-active: rgb(145, 194, 227) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
