--- a/themes/Macchiato/Teal/userContent.css
+++ b/themes/Macchiato/Teal/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(158, 220, 211) !important;
       --color-accent-primary-active: rgb(139, 205, 213) !important; 
       background-color: #24273a !important;
+      --in-content-page-background: #24273a !important;
     }
 
   }
