--- a/themes/Mocha/Maroon/userContent.css
+++ b/themes/Mocha/Maroon/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(240, 182, 192) !important;
       --color-accent-primary-active: rgb(235, 167, 161) !important; 
       background-color: #1e1e2e !important;
+      --in-content-page-background: #1e1e2e !important;
     }
 
   }
