--- a/themes/Mocha/Mauve/userContent.css
+++ b/themes/Mocha/Mauve/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(217, 191, 249) !important;
       --color-accent-primary-active: rgb(223, 167, 247) !important; 
       background-color: #1e1e2e !important;
+      --in-content-page-background: #1e1e2e !important;
     }
 
   }
