--- a/themes/Mocha/Sapphire/userContent.css
+++ b/themes/Mocha/Sapphire/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(139, 207, 239) !important;
       --color-accent-primary-active: rgb(116, 168, 236) !important; 
       background-color: #1e1e2e !important;
+      --in-content-page-background: #1e1e2e !important;
     }
 
   }
