--- a/themes/Mocha/Sky/userContent.css
+++ b/themes/Mocha/Sky/userContent.css
@@ -10,6 +10,7 @@
       --color-accent-primary-hover: rgb(159, 227, 239) !important;
       --color-accent-primary-active: rgb(137, 196, 235) !important; 
       background-color: #1e1e2e !important;
+      --in-content-page-background: #1e1e2e !important;
     }
 
   }
