--- a/themes/Frappe/Pink/userContent.css
+++ b/themes/Frappe/Pink/userContent.css
@@ -71,11 +71,11 @@
       --zen-primary-color: #f4b8e4 !important;
     }
 
-    groupbox {
+    groupbox , moz-card{
       background: #303446 !important;
     }
 
-    groupbox button,
+    button,
     groupbox menulist {
       background: #414559 !important;
       color: #c6d0f5 !important;
