--- a/themes/Mocha/Sky/userContent.css
+++ b/themes/Mocha/Sky/userContent.css
@@ -71,11 +71,11 @@
       --zen-primary-color: #89dceb !important;
     }
 
-    groupbox {
+    groupbox , moz-card{
       background: #1e1e2e !important;
     }
 
-    groupbox button,
+    button,
     groupbox menulist {
       background: #313244 !important;
       color: #cdd6f4 !important;
